trybuild-qcell/src/compiletest/lcell_generativity-01.stderr
error[E0599]: no method named `clone` found for struct `LCellOwner` in the current scope
 --> src/compiletest/lcell_generativity-01.rs:9:25
  |
9 |     let owner2 = owner1.clone(); // Compile fail
  |                         ^^^^^ method not found in `LCellOwner<'_>`
